Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98017

QSGRhiTextureGlyphCache::createEmptyTexture() nullptr access crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.2.3, 6.3
    • 6.2.0
    • GUI: Painting
    • None
    • Windows 10, MSVC 2019
    • Windows

       

       

       

       
      when function QRhi::nextResourceUpdateBatch()'s  d->resUpdPool.count() resized to 64, it will not resize anymore,  if QSGRhiTextureGlyphCache::createEmptyTexture()'s m_resourceUpdates call QRhi::nextResourceUpdateBatch() to assign it,  will to be assgin nullptr,  but not judge nullptr,  continue run touching nullptr access crash

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            husoul soul hu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes